# QO-Insight

./: README.md
diff-plan/: .gitmodules  CMakeLists.txt  README.md  postprocess.py
diff-plan/include/: data.h  postgres_query_plan.h  presto_query_plan.h  query_plan.h
diff-plan/include/diff/: matching_sequence.h
diff-plan/include/diff/matcher/: bottomup_matcher.h  fixed_matcher.h  matcher.h  topdown_matcher.h  unmatched_pipelines_matcher.h
diff-plan/plans/postgres/1.sql/: None.json  enable_gathermerge.json  enable_hashagg.json  enable_seqscan.json  enable_sort.json  query.txt
diff-plan/src/: extract_plans.cc  postgres_query_plan.cpp  presto_query_plan.cpp  query_plan.cc  rel_alg_diff.cc
diff-plan/src/diff/: matching_sequence.cpp
diff-plan/src/diff/matcher/: bottomup_matcher.cpp  fixed_matcher.cpp  topdown_matcher.cpp  unmatched_pipelines_matcher.cpp
frontend/: README.md  fix-webpack-issue.sh  modified-webpack.config.js  package.json
frontend/public/: index.html  qpdiff.wasm
frontend/src/: App.css  App.jsx  Score.jsx  bridge.js  config.json  index.jsx  qpdiff.mjs  setupProxy.js  store.js  wasm-wrapper.js
frontend/src/components/: BorderLinearProgress.jsx  CostMetric.jsx  MainQueryCentric.jsx  MainRuleCentric.jsx  QueryPlanTrees.jsx  SideBar.jsx  styles.css
frontend/src/graphs/: BenchmarkTable.jsx  QueryHintSetTable.jsx  QuerySummaryTable.jsx  RulesHintSetTable.jsx  RulesQueryTable.jsx  colors.json  renderBar.jsx
frontend/src/graphs/barchart_benchmark/: Barchart.jsx  Chart.jsx  axis.jsx  bar.jsx  xy-axis.jsx
frontend/src/graphs/barchart_database_rules/: Barchart.jsx  axis.jsx  bar.jsx  xy-axis.jsx
frontend/src/graphs/barchart_db/: Barchart.jsx  axis.jsx  bar.jsx  grid.jsx  xy-axis.jsx
frontend/src/graphs/barchart_query/: Barchart.jsx  axis.jsx  bar.jsx  xy-axis.jsx
frontend/src/graphs/barchart_rules/: Barchart.jsx  bar.jsx  grid.jsx
frontend/src/graphs/tree/: QueryPlan.jsx  custom-links.css  custom-tree.css  styles.css
frontend/src/login/: ConnectModal.jsx  QueryUpload.jsx
frontend/src/pages/: Home.jsx  Intro.jsx  Introduction.jsx
frontend/src/visualizations/: AggregatedRulesVisualization.jsx  BenchmarkVisualization.jsx  DatabaseVisualization.jsx  QueryVisualization.jsx  RulesVisualization.jsx
server/: Cargo.toml  Dockerfile
server/src/: connections.rs  main.rs  models.rs  routes.rs  schema.rs  tests.rs  utils.rs
