[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.4.11", features = [] }
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
lazy_static = "1.4.0"
once_cell = "*"
duckdb = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "*"
rocket_cors = "0.5.0"


[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["diesel_sqlite_pool", "serve"]